--- a/main.ipynb
+++ b/main.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://docs.google.com/spreadsheets/d/1gam0mswuTGMM_MGN_yT_RPl42gPnDqpSIbZcN0fHQ9w/edit?usp=sharing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1.  データ読み込み\n",
     "2. IIR フィルター部分のネットワーク設計\n",
     "3. 空間 (共線性が強すぎるからdropoutを強めに)と EEG ECoG 結合部分のネットワーク設計 EEG ECoG　を mean_squared_error に入力（同じ周波数フィルターが学習できるかも確認したいから別々に学習）\n",
@@ -13,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +47,7 @@
     "import chainer.functions as F\n",
     "import chainer.links as L\n",
     "\n",
-    "\n",
+    "from scipy import signal\n",
     "\n",
     "import pickle\n",
     "import sys\n",
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -276,15 +283,6 @@
    "source": [
     "IIR 全部バラバラ"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -758,14 +756,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1091,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "order = 5\n",
-    "train_time = [0, 1000*60-1]\n",
+    "train_time = [0, 1000*2-1]\n",
     "hamming = signal.hamming(train_time[1]-train_time[0])\n",
     "#training ぶんだけにする\n",
     "#EEG_t = np.zeros((EEG.shape[0]-order+1, EEG.shape[1], order))\n",
@@ -787,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1092,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -854,6 +852,91 @@
     "#        y= IIR_transform(x)\n",
     "#        return([y, IIRs_prev[0], IIRs_prev[1], IIRs_prev[2],IIRs_prev[3]]) # 現在の出力と過去３つの出力\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "138.52205061912537\n",
+      "4390.90771484375\n",
+      "139.40174913406372\n",
+      "9263.453125\n",
+      "132.53298711776733\n",
+      "363.104736328125\n",
+      "131.74679899215698\n",
+      "5244.06396484375\n",
+      "133.4629499912262\n",
+      "28101794.0\n",
+      "132.2279496192932\n",
+      "12690.9072265625\n",
+      "137.8646957874298\n",
+      "3820.031005859375\n",
+      "135.02530646324158\n",
+      "27982.5625\n",
+      "130.27977967262268\n",
+      "32135.705078125\n",
+      "124.56816339492798\n",
+      "3172.5029296875\n",
+      "131.48776292800903\n",
+      "5374.91748046875\n",
+      "128.1611340045929\n",
+      "999.388671875\n",
+      "126.69535493850708\n",
+      "1120.8641357421875\n",
+      "124.87783646583557\n",
+      "1222.45556640625\n",
+      "125.98333954811096\n",
+      "16838.826171875\n",
+      "133.46216130256653\n",
+      "31057.11328125\n",
+      "134.31382036209106\n",
+      "19893.642578125\n",
+      "136.20396995544434\n",
+      "13745.3603515625\n",
+      "135.229017496109\n",
+      "717.747802734375\n",
+      "137.69600629806519\n",
+      "745.171142578125\n"
+     ]
+    }
+   ],
+   "source": [
+    "outout = []\n",
+    "out_loss_history = []\n",
+    "for n in range(20):\n",
+    "    loop = 100\n",
+    "    out = []\n",
+    "    loss_history = np.zeros((loop, 1))\n",
+    "    st = time.time()\n",
+    "    timeSpacePerceptron = TimeSpacePerceptron()\n",
+    "    #optimizer = optimizers.RMSprop()\n",
+    "    optimizer = optimizers.AdaDelta()\n",
+    "    optimizer.setup(timeSpacePerceptron)\n",
+    "    optimizer.add_hook(chainer.optimizer.WeightDecay(0.05))\n",
+    "    #optimizer.add_hook(chainer.optimizer.Lasso(0.5))\n",
+    "    optimizer.add_hook(chainer.optimizer.GradientClipping(0.5))\n",
+    "    #timeSpacePerceptron.zerograds()\n",
+    "    for i in range(loop):\n",
+    "        timeSpacePerceptron.zerograds()\n",
+    "        x1, x2 = timeSpacePerceptron(EEG_t, ECoG_t, train=True)\n",
+    "        loss = F.mean_squared_error(x1, x2)\n",
+    "        loss.backward()\n",
+    "        optimizer.prepare()\n",
+    "        optimizer.update()\n",
+    "        loss_history[i] = loss.data\n",
+    "        out.append(copy.deepcopy(timeSpacePerceptron))\n",
+    "    print(time.time()-st)\n",
+    "    print(loss.data)\n",
+    "    out_loss_history.append(loss_history)\n",
+    "    outout.append(out)"
    ]
   },
   {
@@ -1537,8 +1620,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
