--- a/main_EEG_prediction.ipynb
+++ b/main_EEG_prediction.ipynb
@@ -158,25 +158,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "saved_data = dict()\n",
-    "loop = 1000\n",
+    "loop = 10\n",
     "loop_num = 1\n",
     "st = time.time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "14.765949010848999\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vv000844/.pyenvi/versions/anaconda3-2.5.0/lib/python3.5/site-packages/chainer/functions/activation/lstm.py:15: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1 / (1 + numpy.exp(-x))\n"
+     ]
+    }
+   ],
    "source": [
     "# channle をわけない\n",
     "\n",
@@ -200,22 +217,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.722441363875\n",
+      "-0.10472130494\n",
+      "-0.0102468284976\n",
+      "0.327211162442\n",
+      "-0.061650506064\n",
+      "0.0449810304888\n",
+      "0.0884801714201\n",
+      "0.225638123594\n",
+      "-0.00479961032494\n",
+      "0.341115766539\n",
+      "-0.310463219494\n",
+      "0.101581488687\n",
+      "0.362879131303\n",
+      "-0.24269382676\n",
+      "0.416992800316\n",
+      "-0.351227653347\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vv000844/.pyenvi/versions/anaconda3-2.5.0/lib/python3.5/site-packages/chainer/functions/activation/lstm.py:15: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1 / (1 + numpy.exp(-x))\n"
+     ]
+    }
+   ],
    "source": [
-    "#EEG_filtered_prev = [Variable(np.zeros((time_range, 1)).astype('float32')) for j in range(EEG.shape[1])] #前の出力をいれるところ　(RNN)\n",
-    "#ECoG_filtered_prev = [Variable(np.zeros((time_range, 1)).astype('float32')) for j in range(ECoG.shape[1])] #前の出力をいれるところ\n",
+    "# LSTM\n",
     "\n",
-    "\n",
-    "x1, x2, EEG_filtered_prev, ECoG_filtered_prev = saved_data[data_type]['NN'](EEG_t, ECoG_t, EEG_filtered_prev, ECoG_filtered_prev, train=False)\n",
+    "x1, x2, EEG_filtered_prev, ECoG_filtered_prev = saved_data[data_type]['NN'](EEG_t[:,:,0], ECoG_t[:,:,0], EEG_filtered_prev, ECoG_filtered_prev, train=False)\n",
     "\n",
     "\n",
     "for ch in range(16):\n",
     "    print(np.corrcoef(x1.data[:,ch], x2.data[:,ch])[0, 1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
